--- a/frontend/css/layout.css
+++ b/frontend/css/layout.css
@@ -52,7 +52,7 @@ header .banner {
    vertical-align: middle;
    margin: 0 auto;
    width: 85%;
-   padding-bottom: 30pxs;
+   padding-bottom: 30px;s
    text-align: center;
 }
 
@@ -62,18 +62,11 @@ header .banner-text h1 {
    color: #fff;
    letter-spacing: -2px;
    margin: 0 auto 18px auto;
-   text-shadow: 0px 1px 6px rgba(0, 0, 0, .8);
-}
-header .banner-text h2 {
-   font: 35px/1.1em 'opensans-bold', sans-serif;
-   color: #fff;
-   letter-spacing: -2px;
-   margin: 0 auto 18px auto;
-   text-shadow: 0px 1px 6px rgba(0, 0, 0, .8);
+   text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
 }
 header .banner-text h3 {
    font: 18px/1.9em 'librebaskerville-regular', serif;
-   color: #000;
+   color: #A8A8A8;
    margin: 0 auto;
    width: 70%;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
@@ -102,7 +95,7 @@ header .social li {
    padding: 0;
 }
 header .social li a { color: #fff; }
-header .social li a:hover { color: #0090f0; }
+header .social li a:hover { color: #11ABB0; }
 
 /* scrolldown link */
 header .scrolldown a {
@@ -124,7 +117,7 @@ header .scrolldown a {
    -o-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
 }
-header .scrolldown a:hover { color: #0090f0; }
+header .scrolldown a:hover { color: #11ABB0; }
 
 /* primary navigation
 --------------------------------------------------------------------- */
@@ -147,7 +140,7 @@ header .scrolldown a:hover { color: #0090f0; }
    left: 0;
    top: 0;
 }
-.opaque { background-color: #fff; }
+.opaque { background-color: #333; }
 
 /* hide toggle button */
 #nav-wrap > a.mobile-btn { display: none; }
@@ -176,7 +169,7 @@ ul#nav li a {
    line-height: 32px;
 	text-decoration: none;
    text-align: left;
-   color: #000;
+   color: #fff;
 
 	-webkit-transition: color .2s ease-in-out;
 	-moz-transition: color .2s ease-in-out;
@@ -186,7 +179,7 @@ ul#nav li a {
 }
 
 ul#nav li a:active { background-color: transparent !important; }
-ul#nav li.current a { color: #0090f0; }
+ul#nav li.current a { color: #F06000; }
 
 
 /* ------------------------------------------------------------------ */
@@ -200,8 +193,8 @@ ul#nav li.current a { color: #0090f0; }
    overflow: hidden;
 }
 
-#about a, #about a:visited  { color: #0090f0; }
-#about a:hover, #about a:focus { color: #0090f0; }
+#about a, #about a:visited  { color: #fff; }
+#about a:hover, #about a:focus { color: #11ABB0; }
 
 #about h2 {
    font: 22px/30px 'opensans-bold', sans-serif;
@@ -210,7 +203,7 @@ ul#nav li.current a { color: #0090f0; }
 }
 #about p {
    line-height: 30px;
-   color: #fff;
+   color: #7A7A7A;
 }
 #about .profile-pic {
    position: relative;
@@ -249,7 +242,7 @@ ul#nav li.current a { color: #0090f0; }
    overflow: hidden;
 }
 
-#resume a, #resume a:visited  { color: #0090f0; }
+#resume a, #resume a:visited  { color: #11ABB0; }
 #resume a:hover, #resume a:focus { color: #313131; }
 
 #resume h1 {
@@ -258,7 +251,7 @@ ul#nav li.current a { color: #0090f0; }
    letter-spacing: 1px;
 }
 #resume h1 span {
-   border-bottom: 3px solid #0090f0;
+   border-bottom: 3px solid #11ABB0;
    padding-bottom: 6px;
 }
 #resume h3 {
@@ -268,7 +261,7 @@ ul#nav li.current a { color: #0090f0; }
 #resume .header-col { padding-top: 9px; }
 #resume .main-col { padding-right: 10%; }
 
-.education, .work, .courses, .blogs, .conferences {
+.education, .work {
    margin-bottom: 48px;
    padding-bottom: 24px;
    border-bottom: 1px solid #E8E8E8;
@@ -278,7 +271,6 @@ ul#nav li.current a { color: #0090f0; }
    color: #6E7881;
    margin-bottom: 18px;
    margin-top: 9px;
-   font-weight: 500px;
 }
 #resume .info span {
    margin-right: 5px;
@@ -287,7 +279,6 @@ ul#nav li.current a { color: #0090f0; }
 #resume .date {
    font: 15px/24px 'opensans-regular', sans-serif;
    margin-top: 6px;
-   font-weight: 500px;
 }
 
 /*----------------------------------------------*/
@@ -804,7 +795,7 @@ call-to-action .button {
 }
 #contact .section-head { margin-bottom: 42px; }
 
-#contact a, #contact a:visited  { color: #0090f0; }
+#contact a, #contact a:visited  { color: #11ABB0; }
 #contact a:hover, #contact a:focus { color: #fff; }
 
 #contact h1 {
@@ -865,7 +856,7 @@ call-to-action .button {
 #contact textarea:focus,
 #contact select:focus {
 	color: #fff;
-	background-color: #0090f0;
+	background-color: #11ABB0;
 }
 #contact button.submit {
 	text-transform: uppercase;
@@ -884,7 +875,7 @@ call-to-action .button {
 	background: #fff;
 }
 #contact span.required {
-	color: #0090f0;
+	color: #11ABB0;
 	font-size: 13px;
 }
 #message-warning, #message-success {
@@ -896,7 +887,7 @@ call-to-action .button {
    margin-left: 26%;
 }
 #message-warning { color: #D72828; }
-#message-success { color: #0090f0; }
+#message-success { color: #11ABB0; }
 
 #message-warning i,
 #message-success i {
