--- a/frontend/css/default.css
+++ b/frontend/css/default.css
@@ -171,12 +171,7 @@ h5 { font-size: 18px; line-height: 30px; }
 h6 { font-size: 14px; line-height: 30px; }
 .subheader { }
 
-p { 
-   margin: 0 0 30px 0;
-   color: #000;
-   font-weight: 600;
-   font-size: 16px;
-}
+p { margin: 0 0 30px 0; }
 p img { margin: 0; }
 p.lead {
    font: 19px/36px 'opensans-light', sans-serif;
@@ -293,7 +288,7 @@ hr { border: solid #E3E3E3; border-width: 1px 0 0; clear: both; margin: 11px 0 3
 a, a:visited {
    text-decoration: none;
    outline: 0;
-   color: #0090f0;
+   color: #11ABB0;
 
    -webkit-transition: color .3s ease-in-out;
    -moz-transition: color .3s ease-in-out;
@@ -354,7 +349,7 @@ li p { }
    color: #313131;
 }
 .stats-tabs li a:hover {
-   color:#0090f0;
+   color:#11ABB0;
 }
 .stats-tabs li a b {
 	display: block;
@@ -366,7 +361,7 @@ li p { }
 
 /* definition list */
 dl { margin: 12px 0; }
-dt { margin: 0; color:#0090f0; }
+dt { margin: 0; color:#11ABB0; }
 dd { margin: 0 0 0 20px; }
 
 /* Lining Definition Style Markup */
@@ -441,7 +436,7 @@ dd { margin: 0 0 0 20px; }
 }
 .pagination .current,
 .pagination .current:hover {
-   background-color: #0090f0;
+   background-color: #11ABB0;
    color: #fff;
 }
 .pagination .inactive,
@@ -469,7 +464,7 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"] {
    font: 16px/30px 'opensans-bold', sans-serif;
-   background: #0090f0;
+   background: #11ABB0;
    display: inline-block;
 	text-decoration: none;
    letter-spacing: 0;
