--- a/frontend/css/media-queries.css
+++ b/frontend/css/media-queries.css
@@ -112,7 +112,7 @@
 	   width: 48px;
 		height: 48px;
 		text-align: left;
-		background-color: #0090f0;
+		background-color: #CC5200;
 		position: relative;
       border: none;
       float: right;
@@ -160,7 +160,7 @@
 	#nav-wrap:target > ul#nav	{
 	   display: block;
       padding: 30px 20px 48px 20px;
-      background: #fff;
+      background: #1f2024;
       margin: 0 30px;
       clear: both;
    }
